# mintcraft-backup

./: .gitignore  Anchor.toml  Attempt  CHANGELOG.md  CLAUDE.md  Cargo.lock.root  Cargo.toml  Cargo.toml.bak  Cargo.toml.bak.1760420257  DOCUMENTATION_INDEX.md  README.md  READY_TO_TEST.md  SESSION_LOG.md  TESTING_QUICKSTART.md  TEST_IN_PROGRESS.md  TEST_RESULTS.md  Try  h origin main  index.html  mcp_server.sh  package-lock.json  package.json  solana.git  vite.config.ts
.bak_1760411336/: Cargo.toml  extensions.ts  vite.config.ts
.bak_1760411365/: Cargo.toml  vite.config.ts
.bak_1760411498/: extensions.ts
.bak_1760411608/: Cargo.toml  mintcraft-src.tar  vite.config.ts  web-src.tar
.mcp_bak/: Cargo.toml.1760422425  mintcraft.Cargo.toml.1760422263
.stack_bak/: Anchor.toml.1760423855  Anchor.toml.1760426166  Anchor.toml.1760460746  Cargo.toml.1760423855  Cargo.toml.1760426032  Cargo.toml.1760460746  mintcraft.Cargo.toml.1760426166
api/: README.md  meteora-pool.js  package-lock.json  package.json  server.js
docs/: BUILD_NOTES.md  CUSTOM_REWARD_TOKENS.md  DEVNET_LIQUIDITY_TESTING.md  FAQ.md  FIXING_UNKNOWN_INSTRUCTIONS.md  JUPITER_DEVNET_TESTING.md  METEORA_API_TESTING.md  METEORA_INTEGRATION.md  METEORA_TOKEN_REQUIREMENTS.md  QUICK_REFERENCE.md  REFLECTIONS.md  REFLECTIONS_SUMMARY.md  REFLECTIONS_TESTING.md  TECHNICAL_OVERVIEW.md  TOKENOMICS_EXAMPLES.md  USER_GUIDE.md  solana-stack-lock.md
offchain-logger/: Cargo.toml
programs/mintcraft/: Cargo.toml  Cargo.toml-bu  Cargo.toml.bak  Cargo.toml.bak.1760417600  Cargo.toml.bak.1760417609
programs/mintcraft/src/: lib.rs
scripts/: add-meteora-liquidity-v2.mjs  add-meteora-liquidity.mjs  anchor-build.sh  anchor_build_032.sh  collect-fees.env  collect-fees.env.example  collect-transfer-fees.cron.sh  collect-transfer-fees.mjs  create-fresh-test-token.mjs  create-meteora-compatible-token.mjs  create-meteora-pool.mjs  create-orca-pool-v2.mjs  create-orca-pool.mjs  create-simple-spl-tokens.mjs  create-simple-test-tokens.mjs  distribute-reflections.mjs  fix_build.sh  install-fee-cron.sh  install-reflection-cron.sh  prepare-token-for-pool.mjs  reflections.env.example  setup-devnet-pool.mjs  test-full-flow.mjs  test-jupiter-devnet.mjs  test-meteora-api.mjs  test-reflections.mjs  test-swap-fallback.mjs  upload-idl.sh
src/: App.tsx  index.css  main.tsx
src/components/: AdvancedFeatures.tsx  AuthorityManager.tsx  CloneToken.tsx  FeeCalculator.tsx  NetworkToggle.tsx  Token22Extensions.tsx  TokenForm.tsx  TokenTransfer.tsx  TransactionPreview.tsx
src/contexts/: WalletContext.tsx
src/hooks/: useTokenMinting.test.ts  useTokenMinting.ts
src/integrations/supabase/: client.ts
src/lib/: ipfs.ts  solana.ts
src/lib/solana/: amount.ts  connection.ts  extensions.ts  index.ts  max-wallet.ts  token-service.ts  transaction-builder.ts  types.ts
src/pages/: Index.tsx  ReflectionDashboard.tsx
supabase/: config.toml
supabase/functions/mint-token/: index.ts
supabase/functions/upload-to-ipfs/: index.ts
