[package]
name = "mintcraft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-messages = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", default-features = false, features = ["derive","idl-build"] }
anchor-spl = { version = "0.30.1", default-features = false, features = ["token","associated_token","idl-build"] }
spl-token = { version = "4.0.3", features = ["token-2022"] }
spl-associated-token-account = { version = "3.0.4", features = ["no-entrypoint"] }
solana-program = "1.18.17"
solana-sdk = "1.18.17"
switchboard-solana = { version = "0.30.4", default-features = false, features = ["no-entrypoint","cpi"] }

[dev-dependencies]
solana-program-test = "1.18.22"

# Dependency unification for Solana BPF build
base64 = "0.21.7"
zeroize = "1.3.0"
elliptic-curve = "=0.11.12"
