[package]
name = "mintcraft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-messages = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", default-features = false, features = ["derive", "interface-instructions", "init-if-needed"] }
anchor-spl  = { version = "0.32.1", default-features = false, features = ["associated_token", "token", "token_2022"] }
spl-token-2022 = { version = "8.0.1", default-features = false, features = ["no-entrypoint"] }
spl-transfer-hook-interface = { version = "0.10.0", default-features = false }
spl-tlv-account-resolution = { version = "0.10.0", default-features = false }

[dev-dependencies]
solana-program-test = "2.3.0"
